# evmc

./: CMakeLists.txt  LICENSE  README.md
docs/: evm.md
examples/: bubble_sort.evm  convolution.evm  crc32.evm  fibonacci_loop.evm  fibonacci_mem.evm  fibonacci_recursive.evm  frame_pointer.evm  input.evm  inputs.txt  opcode_arith.evm  opcode_call_ret.evm  opcode_flow.evm  opcode_flow2.evm  opcode_io.evm  opcode_memory.evm  valid_alloc.evm  valid_call.evm  valid_call2.evm  valid_mem.evm  valid_nop.evm
examples/invalid/: invalid_div.evm  invalid_jmp.evm  invalid_mem.evm  invalid_mem2.evm  invalid_reg.evm  invalid_ret.evm
src/: bytecode_interpreter.cpp  bytecode_interpreter.h  bytecode_reader.cpp  bytecode_reader.h  codegen.cpp  codegen.h  data_symbols.cpp  data_symbols.h  import_symbols.cpp  import_symbols.h  main.cpp  pe_writer.cpp  pe_writer.h  prerequisites.h  utils.cpp
